# Game-of-Life

./: CMakeLists.txt
src/: CMakeLists.txt  Constants.hpp  Vector2.hpp  main.cpp
src/CellularAutomata/: CellularAutomata.cpp  CellularAutomata.hpp  Coordinate.hpp
